--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #1A1A1D;
+    background: linear-gradient(90deg, rgb(197, 216, 229) 0%, rgb(28, 46, 66) 100%);
 }
 
 .container {
