--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     margin-left: 5%;
-    color: white;
+    color: #FFFFFF;
 }
 
 .rightInnerContainer {
@@ -29,6 +29,6 @@
 }
 
 .exitButton {
-    color: white;
+    color: #FFFFFF;
     font-size: 1.5rem
 }
