--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -25,6 +25,12 @@
         width: 100%;
         height: 100%;
     }
+
+    form {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 1200px) {
