--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -12,8 +12,56 @@
     justify-content: space-between;
     background: #FFFFFF;
     border-radius: 8px;
-    height: 60%;
+    height: 80%;
     width: 35%;
+}
+
+
+.allUsers {
+    margin: .5rem auto auto;
+    height: 80%;
+}
+
+.returnButton {
+    display: block;
+    position: relative;
+    left: 90%;
+    border-radius: 35px;
+    border: none;
+    font-size: 1.2rem;
+    padding: 10px;
+    color: #2979FF;
+    background-color: #e9f0fc;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+}
+
+.returnButton:hover {
+    transform: scale(1.15);
+}
+
+.allUsersHeader {
+    font-size: 1.6rem;
+    margin: .5rem auto 1rem;
+    border-bottom: 5px solid #2979FF;
+    color: #2979FF;
+    font-family: 'Poppins', sans-serif;
+}
+
+.onlineUser {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin: 0 auto;
+    color: #2979FF;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.3rem;
+    text-transform: capitalize;
+}
+
+.activeItem {
+    display: flex;
+    justify-content: center;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
