--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -1,7 +1,7 @@
 .messageBox {
     background: #F3F3F3;
     border-radius: 15px;
-    padding: 5px 20px;
+    padding: 0px 15px;
     color: white;
     display: inline-block;
     max-width: 80%;
@@ -11,12 +11,8 @@
     width: 100%;
     letter-spacing: 0;
     float: left;
-    font-size: 1.1em;
+    font-size: .9rem;
     word-wrap: break-word;
-}
-
-.messageText img {
-    vertical-align: middle;
 }
 
 .messageContainer {
