--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -25,13 +25,14 @@
 
 .onlineIcon {
     margin-right: 5%;
-    color: rgb(11, 255, 11);
+    color: rgb(10, 236, 10);
 }
 
 .exitButton {
-    color: #FFFFFF;
+    color: #e5f0fc;
     font-size: 1.8rem;
     transition: all .2s ease-in-out;
+
 }
 
 .showUsers {
@@ -42,6 +43,7 @@
     border: none;
     cursor: pointer;
     transition: all .2s ease-in-out;
+    background-color: #e5f0fc;
 }
 
 .exitButton:hover,
