--- a/client/src/components/OnlineUsers/OnlineUsers.css
+++ b/client/src/components/OnlineUsers/OnlineUsers.css
@@ -12,7 +12,7 @@
     font-size: 1.2rem;
     padding: 10px;
     color: #2979FF;
-    background-color: #e9f0fc;
+    background-color: #e5f0fc;
     cursor: pointer;
     transition: all .2s ease-in-out;
 }
@@ -43,4 +43,20 @@
 .activeItem {
     display: flex;
     justify-content: center;
+}
+
+@media (min-width: 360px) and (max-width: 480px) {
+    .allUsersHeader {
+        font-size: 1.4rem;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 359px) {
+    .allUsersHeader {
+        font-size: 1.2rem;
+    }
+
+    .onlineUser {
+        font-size: 1rem;
+    }
 }
