Added linear gradient background on 'Join' screen and 'onlineUsers'

--- a/client/src/components/OnlineUsers/OnlineUsers.css
+++ b/client/src/components/OnlineUsers/OnlineUsers.css
@@ -24,8 +24,9 @@
 .allUsersHeader {
     font-size: 1.6rem;
     margin: .5rem auto 1rem;
-    border-bottom: 5px solid #2979FF;
-    color: #2979FF;
+    border-bottom: 5px solid #e5f0fc;
+    border-radius: 5px;
+    color: #e5f0fc;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -34,7 +35,7 @@
     align-items: center;
     gap: 5px;
     margin: 0 auto;
-    color: #2979FF;
+    color: #e5f0fc;
     font-family: 'Poppins', sans-serif;
     font-size: 1.3rem;
     text-transform: capitalize;
