--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     font-family: Helvetica;
-    color: #828282;
+    color: #eee;
     letter-spacing: 0.3px;
     font-size: 12px;
 }
