--- a/client/src/screens/Chat/Chat.css
+++ b/client/src/screens/Chat/Chat.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(90deg, rgb(197, 216, 229) 0%, rgb(28, 46, 66) 100%);
+    background: linear-gradient(rgba(41, 121, 255, .7) 0%, rgba(131, 96, 195, .7) 100%);
 }
 
 .container {
@@ -14,6 +14,7 @@
     border-radius: 8px;
     height: 80%;
     width: 35%;
+    background: linear-gradient(rgba(41, 121, 255, .75) 0%, rgba(131, 96, 195, .75) 100%);
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -26,7 +27,7 @@
         position: absolute;
         top: 0;
         width: 100%;
-        height: 90%;
+        height: 92%;
     }
 
     form {
