--- a/client/src/screens/Join/Join.css
+++ b/client/src/screens/Join/Join.css
@@ -24,12 +24,13 @@ body {
 }
 
 .joinInput {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 30px;
-    padding: 15px 20px;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 15px 20px 7px;
     width: 100%;
     color: white;
-    border: 1px solid white
+    border: none;
+    border-bottom: 1px solid white;
+    font-size: 1rem;
 }
 
 .joinInput::placeholder {
@@ -40,7 +41,8 @@ body {
     color: white;
     font-size: 2.5em;
     padding-bottom: 10px;
-    border-bottom: 2px solid white;
+    margin-bottom: 2rem;
+    border-bottom: 5px solid white;
 }
 
 .button {
@@ -50,6 +52,7 @@ body {
     text-decoration: none;
     background: transparent;
     padding: 20px;
+    margin-top: 30px;
     border-radius: 30px;
     display: inline-block;
     border: 3px solid rgba(255, 255, 255, .7);
@@ -74,7 +77,9 @@ body {
 
 @media (min-width: 320px) and (max-width: 480px) {
 
-    .joinInnerContainer {
+    .joinInnerContainer,
+    .joinInput,
+    .button {
         width: 90%;
     }
 }
