Replaced input in the chat to textArea, fixed crash when entering room with a used name

--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -2,12 +2,13 @@
     display: flex;
 }
 
-.input {
+.text {
     border: none;
     border-radius: 0;
-    padding: 2%;
     width: 85%;
     font-size: 1.2em;
+    padding: 1rem;
+    font-family: 'Roboto', sans-serif;
 }
 
 input:focus,
