--- a/client/src/components/InfoBar/InfoBar.css
+++ b/client/src/components/InfoBar/InfoBar.css
@@ -55,3 +55,9 @@
 .showUsers:hover {
     transform: scale(1.15);
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .showUsers {
+        margin-right: 10%;
+    }
+}
