--- a/client/src/components/OnlineUsers/OnlineUsers.css
+++ b/client/src/components/OnlineUsers/OnlineUsers.css
@@ -1,6 +1,8 @@
 .allUsers {
     margin: .5rem auto auto;
     height: 80%;
+    max-width: 70%;
+    text-align: center;
 }
 
 .returnButton {
@@ -46,6 +48,10 @@
 }
 
 @media (min-width: 360px) and (max-width: 480px) {
+    .allUsers {
+        max-width: 90%;
+    }
+
     .allUsersHeader {
         font-size: 1.4rem;
     }
